# ntnu-chat-program

./: README.md
A4Client/: .gitignore  README.md
A4Client/Development/assets/debug/: style.css  template.html
A4Client/Include/: assets.hpp  cameras.hpp  channel.hpp  chat_state.hpp  history.hpp  input_box.hpp  login_state.hpp  message.hpp  userlist.hpp
A4Client/Project/: CMakeLists.txt
A4Client/Source/: assets.cpp  channel.cpp  chat_state.cpp  history.cpp  input_box.cpp  login_state.cpp  main.cpp  message.cpp  userlist.cpp
A4Server/Development/assets/shaders/basic/: fragment.glsl  vertex.glsl
A4Server/Include/: assets.hpp  chat_state.hpp
A4Server/Project/: CMakeLists.txt
A4Server/Source/: assets.cpp  chat_state.cpp  main.cpp
A4Shared/Include/: a4.hpp
A4Shared/Libraries/debug/: A4Shared.lib
A4Shared/Project/: CMakeLists.txt  VisualStudio15_x86.bat
A4Shared/Source/: a4.cpp
